<resources>
    <string name="app_name">My Application</string>
    <string name="presentation">Hi,
    I m Aicha Faty Ba</string>
    <string name="about">About Me</string>
    <string name="textdescriptif">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aspernatur debitis eaque iusto libero minus natus provident reprehenderit unde! Amet
        .</string>

    <string name="formation">Formations</string>
    <string name="competence">Competences</string>
    <string name="html">HTML</string>
    <string name="p">70%</string>
    <string name="css">CSS</string>
    <string name="c">80%</string>
    <string name="php">PHP</string>
    <string name="ph">50%</string>
    <string name="java">JAVA</string>
    <string name="j">30%</string>
    <string name="javas">JS</string>
    <string name="js">10%</string>
    <string name="boot">Bootstap</string>
    <string name="bs">40%</string>
    <string name="fig">FIGMA</string>
    <string name="f">45%</string>

    <string name="qualite">Qualites Personnelles</string>

    <string name="curieuse">Curieuse</string>
    <string name="esprit">Esprit dEcoute</string>
    <string name="courage">Courageuse</string>
    <string name="ouverte">Ouverte</string>
    <string name="creative">Creative</string>
    <string name="travailleuse">Travailleuse</string>
    <string name="cool">Cool</string>
    <string name="rigoureuse">Rigoureuse</string>


    <string name="reference">References</string>
    <string name="defar">https://www.linkedin.com/company/defar-sci</string>
    <string name="abass">https://abassndao.business.site/?utm_source=gmbutm_medium=referral</string>
    <string name="simplon">https://simplonline.co/</string>
    <string name="git">https://github.com/aichafaty/gestionRV</string>


    <string name="devweb">Developpew Web</string>
    <string name="ref">Reference Digital</string>
    <string name="mobil">Developpeur Mobile</string>
    <string name="services">Mes Services</string>


    <string name="centre">Centre Interet</string>

    <string name="basket">Le Basketball</string>
    <string name="lecture">La Lecture</string>
    <string name="plage">La Plage</string>
    <string name="dooc">La Documentaire</string>



    <string name="contact">Contact</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prenom</string>
    <string name="mail">Mail</string>
    <string name="message">Message</string>
    <string name="sujet">Sujet</string>
    <string name="ouakam">Dakar,Ouakam</string>
    <string name="email">aichafatybittyba@gmail.com</string>
    <string name="phone">772556533
                         762243639</string>

</resources>